src/main/java/com/example/demo/error/NoTransactionException.java
package com.example.demo.error;

public class NoTransactionException extends Exception {
	public NoTransactionException(String abc) {
		
		super(abc);
		
	}

}
